--- a/doc/kcontrol/lookandfeel/index.docbook
+++ b/doc/kcontrol/lookandfeel/index.docbook
@@ -134,7 +134,7 @@
 </para>
 
 <para>
-  To remove an installed Global Theme, click on the button with the thrash icon that appears when hovering over a theme thumbnail. Note that you can only remove Global Themes that you have downloaded yourself.
+  To remove an installed Global Theme, click on the button with the trash icon that appears when hovering over a theme thumbnail. Note that you can only remove Global Themes that you have downloaded yourself.
 </para>
 
 <para>
