doc: fix the path to the theme creation doc
The doc was probably reshuffled and the old link does not work anymore.

--- a/doc/kcontrol/lookandfeel/index.docbook
+++ b/doc/kcontrol/lookandfeel/index.docbook
@@ -138,7 +138,7 @@
 </para>
 
 <para>
-  If you are interested in creating your own theme, you can learn more about the various components <ulink url="https://develop.kde.org/docs/extend/plasma/">here</ulink>.
+  If you are interested in creating your own theme, you can learn more about the various components <ulink url="https://develop.kde.org/docs/plasma/">here</ulink>.
 </para>
 
 </sect2>
